# echosync

./: .env.example  .gitignore  AGENTS.md  BACKEND-BUG-REPORT-caption_update截断文本.md  CODE-AUDIT-FINAL.md  CODE-AUDIT-断行逻辑.md  DEBUGGING-SUBTITLE-FLICKER.md  DIAGNOSIS-TEXT-LOSS.md  FIX-SUMMARY.md  README.md  REFACTOR_PROGRESS.md  STASH_AUDIT_REPORT_2026-06-13.md  TIMELINE_IMPLEMENTATION_PLAN.md  UI重构完成总结-2026-06-12.md  package.json  字幕截断问题修复报告-FINAL.md  字幕问题全链路解决方案.md  真正的根本原因-HypothesisUpdatePolicy的Bug.md
apps/agent/: pyproject.toml
apps/agent/docs/: terminology_string_analysis.md
apps/agent/scripts/: deepl_latency_benchmark.py
apps/agent/src/echosync_agent/: __init__.py  asr_demo.py  main.py
apps/agent/src/echosync_agent/diagnostics/: __init__.py  real_agent_translation_benchmark.py  realtime_log_summary.py  translation_strategy_benchmark.py
apps/agent/src/echosync_agent/domain/: __init__.py  events.py
apps/agent/src/echosync_agent/interfaces/: __init__.py  audio_source.py  correction.py  event_bus.py  interpretation_engine.py  subtitle_sink.py  transcriber.py  translated_audio_sink.py  translation_repair.py  translator.py  tts.py
apps/agent/src/echosync_agent/pipeline/: __init__.py  engine_pipeline.py  realtime_pipeline.py
apps/agent/src/echosync_agent/runtime/: __init__.py  assembly.py  capabilities.py  (+4 more)
apps/agent/terms/: default.csv
apps/agent/tests/: terminology_audit.py  test_asr_cli_contracts.py  test_asr_media_contracts.py  test_asr_provider_contracts.py  test_asr_voxtral_contracts.py  test_asr_websocket_contracts.py  test_caption_text_regions.py  test_caption_update_contracts.py  test_caption_websocket_contracts.py  test_cascaded_latency_contracts.py  test_cjk_spacing.py  test_deepgram_transcriber.py  test_deepl_translator_contracts.py  test_deepseek_translator_contracts.py  test_deepseek_translator_source_text_protection.py  test_hybrid_livetranslate_engine.py  test_hypothesis_update_policy.py  test_interpretation_engine_contracts.py  test_pipeline_contracts.py  test_qwen_livetranslate_engine.py  test_qwen_realtime_asr.py  test_realtime_caption_websocket_contracts.py  test_realtime_log_summary.py  test_runtime_capabilities.py  test_semantic_chunker_contracts.py  test_semantic_translation_repair.py  test_silero_vad_detector.py  test_simul_translation_policy.py  test_terminology.py  test_text_emission_policy.py  test_transcript_assembler_contracts.py  test_translation_strategy_benchmark.py  test_tts_provider_contracts.py
(+347 files in other folders)
