[project]
name = "echosync-agent"
version = "0.1.0"
description = "Realtime AI interpretation agent for EchoSync."
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "edge-tts>=6.0",
  "livekit-agents[silero,turn-detector]>=1.4,<2.0",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "websocket-client>=1.8"
]

[project.scripts]
echosync-agent-demo = "echosync_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echosync_agent"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
