[project]
name = "echosync-agent"
version = "0.1.0"
description = "EchoSync 实时 AI 同传 Agent。"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "edge-tts>=6.0",
  "fastapi>=0.115",
  "imageio-ffmpeg>=0.5",
  "livekit-agents[silero,turn-detector]>=1.4,<2.0",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.30",
  "websocket-client>=1.8"
]

[project.scripts]
echosync-agent-demo = "echosync_agent.main:run"
echosync-asr-demo = "echosync_agent.asr_demo:main"
echosync-asr-server = "echosync_agent.transport.asr_websocket:run"
echosync-caption-server = "echosync_agent.transport.caption_ws:run_caption_server"
echosync-log-summary = "echosync_agent.diagnostics.realtime_log_summary:main"
echosync-translation-strategy-benchmark = "echosync_agent.diagnostics.translation_strategy_benchmark:main"
echosync-real-agent-translation-benchmark = "echosync_agent.diagnostics.real_agent_translation_benchmark:main"

[project.optional-dependencies]
funasr = [
  "funasr>=1.2",
  "modelscope>=1.19",
  "torch>=2.0"
]
voxtral = [
  "mistralai[realtime]>=1.0"
]
deepgram = [
  "websockets>=12"
]
qwen = [
  "websockets>=12"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echosync_agent"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
